removed useless files; added a "play" icon

--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -6,13 +6,14 @@
     <com.google.android.exoplayer2.ui.PlayerView android:layout_width="match_parent"
                                                  android:id="@+id/player_view"
                                                  app:use_controller="false"
+                                                 android:layout_gravity="center"
                                                  android:layout_height="match_parent"/>
 
     <ImageView android:layout_width="80dp" android:layout_height="80dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:id="@+id/play_btn"
-               android:src="@drawable/ic_play_arrow"/>
+               android:src="@drawable/ic_play_btn"/>
 
     <ProgressBar android:layout_width="wrap_content" android:layout_gravity="center"
                  android:id="@+id/progress_bar"
