added splash screen; added preloading video;

--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -5,15 +5,12 @@
 
     <com.google.android.exoplayer2.ui.PlayerView android:layout_width="match_parent"
                                                  app:show_buffering="always"
+                                                 android:focusable="true"
                                                  android:id="@+id/player_view"
-                                                 app:use_controller="false"
+                                                 android:focusableInTouchMode="true"
                                                  android:layout_gravity="center"
+                                                 app:controller_layout_id="@layout/exo_playback_control_view"
+                                                 app:auto_show="false"
                                                  android:layout_height="match_parent"/>
-
-    <ImageView android:layout_width="80dp" android:layout_height="80dp"
-               android:layout_gravity="center"
-               android:id="@+id/play_btn"
-               android:visibility="gone"
-               android:src="@drawable/ic_play_btn"/>
 
 </FrameLayout>
